handle pre-existing tiles better